# networks-chat-app

./: .gitignore  README.md  exceptions.py  peer.py  pyproject.toml  registry.py  requirements.txt  stress_performance.bash  user_auth.py
chat/: peer.py  registry.py
chat/client/: peer_client.py  peer_main.py  peer_room.py  peer_server.py
chat/common/: exceptions.py  utils.py
chat/server/: client_thread.py  db.py  server_context.py  udp_server.py  user_auth.py
chat/tests/: TestAuth.py  TestDb.py
tests/: stress.py
tests/client/: test_peer_main.py  test_peer_room.py
tests/common/: test_utils.py
tests/server/: test_client_thread.py  test_db.py  test_user_auth.py
