[tool.poetry]
name = "networks-proj"
version = "0.1.0"
description = ""
authors = ["Mustafa U. Abdelrahman <mustafausama@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
netifaces = "^0.11.0"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
